# grocy-rs

./: Cargo.toml
src/: cli.rs  controller.rs  grocy.rs  main.rs  tui.rs
src/view/: mod.rs
