[package]
name = "grocy-rs"
version = "0.1.0"
authors = ["Jennifer Glauche <=^.^=@rust20.kittenme.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "0.5.4"
dirs = "2.0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
serde-aux = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }
failure = "0.1.6"
crossterm = "0.15"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }



